--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ APP_SECRET=22dd48fffe4b1a7272513a10fe71f9d8
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://root:@192.168.210.123:3306/letzswap
+DATABASE_URL=mysql://root:@localhost:3306/letzswap
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
