Create App\Mailer\RegistrationMailer service

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -26,3 +26,10 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    App\Mailer\RegistrationMailer:
+        arguments:
+            $subject:       '%register_mail_subject%'
+            $sender:        '%register_mail_sender%'
+            # $txtTemplate:   '%register_mail_txt_template%'
+            # $htmlTemplate:  '%register_mail_html_template%'
