Add mail registration parameters

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,6 +5,10 @@
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     locale: 'en'
+    register_mail_subject:          'Please, activate your account'
+    register_mail_sender:           'no-reply@letzswap.lu'
+    register_mail_txt_template:     'Registration/registration-mail.txt.twig'
+    register_mail_html_template:    'Registration/registration-mail.html.twig'
 
 services:
     # default configuration for services in *this* file
@@ -31,5 +35,5 @@ services:
         arguments:
             $subject:       '%register_mail_subject%'
             $sender:        '%register_mail_sender%'
-            # $txtTemplate:   '%register_mail_txt_template%'
-            # $htmlTemplate:  '%register_mail_html_template%'
+            $txtTemplate:   '%register_mail_txt_template%'
+            $htmlTemplate:  '%register_mail_html_template%'
