--- a/.env
+++ b/.env
@@ -31,8 +31,7 @@ DATABASE_URL=mysql://root:@localhost:3306/letzswap
 # For Gmail as a transport, use: "gmail://username:password@localhost"
 # For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
 # Delivery is disabled by default via "null://localhost"
-# MAILER_URL=smtp://192.168.210.81:25
-# Yandex username is no-reply@letzswap.lu and password is 6.N33#$374@e&=t)7u%F=z87axY3]iHP Birthday April 26 1999
+MAILER_URL=smtp://192.168.210.81:25
+# Yandex username is no-reply@letzswap.lu and password is 6.N33#$374@e&=t)7u%F=z87axY3]iHP
 # MAILER_URL=smtp://smtp.yandex.com:465?encryption=ssl&username=no-reply@letzswap.lu&password=6.N33#$374@e&=t)7u%F=z87axY3]iHP
-MAILER_URL=gmail://noreplyletzswap:6.N33#$374@e&=t)7u%F=z87axY3]iHP@smtp.gmail.com
 ###< symfony/swiftmailer-bundle ###
