--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -18,6 +18,9 @@ security:
       anonymous: true
       logout:
         path:   app_logout
+      guard:
+          authenticators:
+              - App\Security\UserAuthenticator
       # activate different ways to authenticate
 
       # http_basic: true
