--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -16,6 +16,8 @@ security:
             security: false
         main:
             anonymous: true
+            logout:
+                path:   app_logout
 
             # activate different ways to authenticate
 
