--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "knplabs/knp-paginator-bundle": "^3.0",
         "ramsey/uuid": "^3.8@stable",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/apache-pack": "^1.0",
