--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,3 +1,5 @@
+ErrorDocument 404 /404.html
+
 # Use the front controller as index file. It serves as a fallback solution when
 # every other rewrite/redirect fails (e.g. in an aliased environment without
 # mod_rewrite). Additionally, this reduces the matching process for the
