--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,10 +5,11 @@
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     locale: 'en'
-    register_mail_subject:          'Please, activate your account'
-    register_mail_sender:           'no-reply@letzswap.lu'
-    register_mail_txt_template:     'Registration/registration-mail.txt.twig'
-    register_mail_html_template:    'Registration/registration-mail.html.twig'
+    contact_mail_recipient:             'contact@letzswap.lu'
+    registration_mail_subject:          'Please, activate your account'
+    registration_mail_sender:           'no-reply@letzswap.lu'
+    registration_mail_txt_template:     'Registration/registration-mail.txt.twig'
+    registration_mail_html_template:    'Registration/registration-mail.html.twig'
     upload_directory:               '%kernel.root_dir%/../var/uploads/'
 
 services:
@@ -32,9 +33,10 @@ services:
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
 
-    App\Mailer\RegistrationMailer:
+    App\Mailer\Mailer:
         arguments:
-            $subject:       '%register_mail_subject%'
-            $sender:        '%register_mail_sender%'
-            $txtTemplate:   '%register_mail_txt_template%'
-            $htmlTemplate:  '%register_mail_html_template%'
+            $recipient:     '%contact_mail_recipient%'
+            $subject:       '%registration_mail_subject%'
+            $sender:        '%registration_mail_sender%'
+            $txtTemplate:   '%registration_mail_txt_template%'
+            $htmlTemplate:  '%registration_mail_html_template%'
