working 404, need to exclude navbar and footer

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -4,6 +4,6 @@
 app_logout:
   path: '/logout'
 
-_errors:
-  resource: '@TwigBundle/Resources/config/routing/errors.xml'
-  prefix:   /_error
+#_errors:
+ # resource: '@TwigBundle/Resources/config/routing/errors.xml'
+  #prefix:   /_error
