--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,3 +3,6 @@
 #    controller: App\Controller\DefaultController::index
 app_logout:
   path: '/logout'
+about:
+  path: /about
+  controller: App\Controller\ContactController::contactAction
