creation of modal popup trigger by button

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -7,3 +7,10 @@ app_logout:
 #_errors:
  # resource: '@TwigBundle/Resources/config/routing/errors.xml'
   #prefix:   /_error
+
+#test to add multilingual in the all website
+ # parameters:    locale: en_GB
+                  # app.locales: en_GB|fr_FR|es_ES
+
+  #framework:
+   # translator:  { fallbacks: ["%locale%"] }
