--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -34,3 +34,4 @@ security:
   access_control:
   # - { path: ^/admin, roles: ROLE_ADMIN }
   # - { path: ^/profile, roles: ROLE_USER }
+  - { path: '^/item/new', roles: ROLE_USER }
