--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -34,4 +34,5 @@ security:
   # Note: Only the *first* access control that matches will be used
   access_control:
     - { path: ^/admin, roles: ROLE_ADMIN }
+    - { path: ^/item/new, roles: ROLE_USER }
   # - { path: ^/profile, roles: ROLE_USER }
