Matthieu fix for security interception

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -15,6 +15,7 @@ security:
       pattern: ^/(_(profiler|wdt)|css|images|js)/
       security: false
     main:
+      pattern: ^/
       anonymous: true
       logout:
         path:   app_logout
