--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,9 @@
 ###> customs ###
 .idea
 ###< customs ###
+###> symfony/webpack-encore-bundle ###
+/node_modules/
+/public/build/
+npm-debug.log
+yarn-error.log
+###< symfony/webpack-encore-bundle ###
