--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
         "encore": "encore"
     },
     "dependencies": {
+        "bootstrap": "^4.3.1",
+        "jquery": "^3.4.0",
+        "popper.js": "^1.15.0",
         "plupload": "^2.3.6"
     }
 }
