add ext fileinfo to composer.json

--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "symfony/validator": "4.2.*",
         "symfony/web-link": "4.2.*",
         "symfony/webpack-encore-bundle": "^1.5",
-        "symfony/yaml": "4.2.*"
+        "symfony/yaml": "4.2.*",
+        "ext-fileinfo": "*"
     },
     "require-dev": {
         "symfony/debug-pack": "*",
