--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,60 +4,62 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
-    locale: 'en'
+  locale: 'en'
 
-    letzswap_contact_email:             'contact@letzswap.lu'
-    letzswap_no-reply_email:            'no-reply@letzswap.lu'
+  letzswap_contact_email:             'contact@letzswap.lu'
+  letzswap_no-reply_email:            'no-reply@letzswap.lu'
 
-    contact_mail_html_template:         'Contact/contact-mail.html.twig'
-    contact_mail_txt_template:          'Contact/contact-mail.txt.twig'
+  contact_mail_html_template:         'Contact/contact-mail.html.twig'
+  contact_mail_txt_template:          'Contact/contact-mail.txt.twig'
 
-    registration_mail_html_template:    'Registration/registration-mail.html.twig'
-    registration_mail_txt_template:     'Registration/registration-mail.txt.twig'
+  registration_mail_html_template:    'Registration/registration-mail.html.twig'
+  registration_mail_txt_template:     'Registration/registration-mail.txt.twig'
 
-    report_mail_html_template:          'Report/report-mail.html.twig'
-    report_mail_txt_template:           'Report/report-mail.txt.twig'
+  report_mail_html_template:          'Report/report-mail.html.twig'
+  report_mail_txt_template:           'Report/report-mail.txt.twig'
 
-    swap_mail_html_template:            'Swap/swap-mail.html.twig'
-    swap_mail_txt_template:             'Swap/swap-mail.txt.twig'
+  swap_mail_html_template:            'Swap/swap-mail.html.twig'
+  swap_mail_txt_template:             'Swap/swap-mail.txt.twig'
 
-    upload_directory:                   '%kernel.root_dir%/../var/uploads/'
+  upload_directory:                   '../public/uploads/'
+  upload_tmp_directory:                   '../public/uploads_tmp/'
+#upload_tmp_directory:                   '%kernel.root_dir%/../public/uploads_tmp/'
 
 services:
-    # default configuration for services in *this* file
-    _defaults:
-        autowire: true      # Automatically injects dependencies in your services.
-        autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+  # default configuration for services in *this* file
+  _defaults:
+    autowire: true      # Automatically injects dependencies in your services.
+    autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
 
-    # makes classes in src/ available to be used as services
-    # this creates a service per class whose id is the fully-qualified class name
-    App\:
-        resource: '../src/*'
-        exclude: '../src/{DependencyInjection,Entity,Migrations,Tests,Kernel.php}'
+  # makes classes in src/ available to be used as services
+  # this creates a service per class whose id is the fully-qualified class name
+  App\:
+    resource: '../src/*'
+    exclude: '../src/{DependencyInjection,Entity,Migrations,Tests,Kernel.php}'
 
-    # controllers are imported separately to make sure services can be injected
-    # as action arguments even if you don't extend any base controller class
-    App\Controller\:
-        resource: '../src/Controller'
-        tags: ['controller.service_arguments']
+  # controllers are imported separately to make sure services can be injected
+  # as action arguments even if you don't extend any base controller class
+  App\Controller\:
+    resource: '../src/Controller'
+    tags: ['controller.service_arguments']
 
-    # add more service definitions when explicit configuration is needed
-    # please note that last definitions always *replace* previous ones
+  # add more service definitions when explicit configuration is needed
+  # please note that last definitions always *replace* previous ones
 
-    App\Mailer\Mailer:
-        arguments:
-            $letzswapContactEmail:      '%letzswap_contact_email%'
-            $letzswapNoReplyEmail:      '%letzswap_no-reply_email%'
-            $htmlContactTemplate:       '%contact_mail_html_template%'
-            $txtContactTemplate:        '%contact_mail_txt_template%'
-            $htmlRegistrationTemplate:  '%registration_mail_html_template%'
-            $txtRegistrationTemplate:   '%registration_mail_txt_template%'
-            $htmlReportTemplate:        '%report_mail_html_template%'
-            $txtReportTemplate:         '%report_mail_txt_template%'
-            $htmlSwapTemplate:          '%swap_mail_html_template%'
-            $txtSwapTemplate:           '%swap_mail_txt_template%'
+  App\Mailer\Mailer:
+    arguments:
+      $letzswapContactEmail:      '%letzswap_contact_email%'
+      $letzswapNoReplyEmail:      '%letzswap_no-reply_email%'
+      $htmlContactTemplate:       '%contact_mail_html_template%'
+      $txtContactTemplate:        '%contact_mail_txt_template%'
+      $htmlRegistrationTemplate:  '%registration_mail_html_template%'
+      $txtRegistrationTemplate:   '%registration_mail_txt_template%'
+      $htmlReportTemplate:        '%report_mail_html_template%'
+      $txtReportTemplate:         '%report_mail_txt_template%'
+      $htmlSwapTemplate:          '%swap_mail_html_template%'
+      $txtSwapTemplate:           '%swap_mail_txt_template%'
 
-    AvatarGenetaror:
-        class: 'App\Service\AvatarGenerator'
-        public: true
+  AvatarGenetaror:
+    class: 'App\Service\AvatarGenerator'
+    public: true
 
