--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -5,4 +5,4 @@ twig:
     form_themes: ['bootstrap_4_layout.html.twig']
     globals:
         locale: '%locale%'
-
+        avatar: "@AvatarGenetaror"
